Chapter 06/chap-6-deployment-liveness-probe.yaml
# kubectl apply -f chap-6-deployment-liveness-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-your-liveness
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-live
  template:
    metadata:
      labels:
        app: frontend-live
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.2
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
