Chapter 06/chap-6-deployment-readiness-probe.yaml
# kubectl apply -f chap-6-deployment-liveness-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ever-ready
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ready
  template:
    metadata:
      labels:
        app: frontend-ready
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.2
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        readinessProbe:
          exec:
            command:
            - ls
            - /bin/sh
