Chapter 06/chap-6-pod-defn-with-resource-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: my-nginx-pod-with-limits
  namespace: default
spec:
  containers:
  - image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    name: nginx
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 100Mi
